--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -272,7 +272,7 @@
 		<div class="container">
 			<div class="row aboutUs">
 				<div class="col-md-12 ">
-					<h3>What Our Customers Say About Us?</h3>
+					<h3>What Our Clients Say About Us?</h3>
 				</div>
 			</div>
 		</div>
@@ -285,14 +285,14 @@
 						<div class="about1">
 						<!--<img class="pic1Ab" src="http://confidentmarketingcoach.com/wp-content/uploads/2013/08/LKS_1524f-640x640.jpg">-->
 							<h3 >Ave Peetri, Coaching by Ave Peetri Inc.</h3>
-							<p>Praves Technology are behind my website www.confidentmarketing.com. They were listening very well to my needs and provided reviews of what they had done on a continuous bases to make sure that we are aligned and that I am getting what I wanted from the website. My website went up on time at the end of last year and has already outperformed my previous website in terms of conversions. I am receiving lots of good comments on the professionalism with which it was created.</p>
+							<p>They were listening very well to my needs and provided reviews of what they had done on a continuous bases to make sure that we are aligned and that I am getting what I wanted from the website. My website went up on time at the end of last year and has already outperformed my previous website in terms of conversions. I am receiving lots of good comments on the professionalism with which it was created.</p>
                           </div>
 					</div>
 					<div class="col-md-6">
 						<div class="about2">
 						<!--<img class="pic2Ab" src="/assets/picAbout/aboutP2.png">-->
-							<h3>John Doe, Company Inc.</h3>
-							<p>Consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo, adipiscing auctor, ut auctor feugiat fermentum nec quisque eget pharetra, felis et venenatis aliquam, nulla nisi lobortis elit, ac luctus.</p>
+							<h3>Gaurav Gupta, Leela Eco Spa</h3>
+							<p>Beautifully crafted website in less than a month! Ashish and avneesh accommodated all requests swiftly (without exception) and made improvements on the go. All in all - super professional work, reasonable price and new friends!</p>
 						</div>
 					</div>
 				</div>
@@ -300,24 +300,24 @@
 		
 			<div class="horL"></div>
 		
-			<div class="container">
-				<div class="row about">
-					<div class="col-md-6">
-						<div class="about1">
-						<!--<img class="pic1Ab" src="/assets/picAbout/aboutP3.png">-->
-							<h3>Tom Sawyer, Company Inc.</h3>
-							<p>A auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor feugiat fermentum quisque eget pharetra, felis et venenatis aliquam, nulla nisi lobortis elit, acnterdum ante feugiat vitae.</p>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="about2">
-						<!--<img class="pic2Ab" src="/assets/picAbout/aboutP4.png">-->
-							<h3>Sarah White, Company Inc.</h3>
-							<p>Mauris scelerisque eu proin nec urna nec a quis justo adipiscing auctor ut auctor feugiat fermentum quisque eget pharetra felis et venenatis aliquam, nulla nisi lobortis elit, ac eleifend nisl ante nec lorem. </p>
-						</div>
-					</div>
-				</div>
-			</div>
+			<!--<div class="container">-->
+				<!--<div class="row about">-->
+					<!--<div class="col-md-6">-->
+						<!--<div class="about1">-->
+						<!--&lt;!&ndash;<img class="pic1Ab" src="/assets/picAbout/aboutP3.png">&ndash;&gt;-->
+							<!--<h3>Tom Sawyer, Company Inc.</h3>-->
+							<!--<p>A auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor feugiat fermentum quisque eget pharetra, felis et venenatis aliquam, nulla nisi lobortis elit, acnterdum ante feugiat vitae.</p>-->
+						<!--</div>-->
+					<!--</div>-->
+					<!--<div class="col-md-6">-->
+						<!--<div class="about2">-->
+						<!--&lt;!&ndash;<img class="pic2Ab" src="/assets/picAbout/aboutP4.png">&ndash;&gt;-->
+							<!--<h3>Sarah White, Company Inc.</h3>-->
+							<!--<p>Mauris scelerisque eu proin nec urna nec a quis justo adipiscing auctor ut auctor feugiat fermentum quisque eget pharetra felis et venenatis aliquam, nulla nisi lobortis elit, ac eleifend nisl ante nec lorem. </p>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
 		
 		</div>
     </div>
@@ -935,8 +935,8 @@
 						<li><i class="fa fa-phone"></i>+1 403 462 0868</li>
 						<li><a href="#"><i class="fa fa-envelope"></i>ashish@thethinktech.com</a></li>
 						<li><i class="fa fa-skype"></i>thethinktech</li>
-						<li><a href="#"><i class="fa fa-twitter"></i>Twitter</a></li>
-						<li><a href="#"><i class="fa fa-facebook-square"></i>Facebook</a></li>
+						<li><a href="https://twitter.com/thethinktech" target="_blank"><i class="fa fa-twitter"></i>Twitter</a></li>
+						<li><a href="https://www.facebook.com/thethinktech" target="_blank"><i class="fa fa-facebook-square"></i>Facebook</a></li>
 						<!--<li><a href="#"><i class="fa fa-dribbble"></i>Dribbble</a></li>-->
 						<!--<li><a href="#"><i class="fa fa-flickr"></i>Flickr</a></li>-->
 						<!--<li><a href="#"><i class="fa fa-youtube-play"></i>YouTube</a></li>-->
@@ -944,9 +944,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="line6">					
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2508.4320712041654!2d-114.0696701!3d51.04510930000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53716ffcc79191d9%3A0x24ed4a97bdfe119c!2s888+3+St+SW%2C+Calgary%2C+AB+T2P+1C9%2C+Canada!5e0!3m2!1sen!2sin!4v1430207277760" width="100%" height="750" frameborder="0" style="border:0"></iframe>		
-		</div>
+		<div class="line6">
+					<!--<iframe src="https://www.google.com/maps/embed/v1/place?q=888%203%20Street%20Southwest%2C%20Calgary%2C%20AB%2C%20Canada&key=AIzaSyCevQjKK8Aab493DXROCLYf_XJc1R_dgtw" width="100%" height="750" frameborder="0" style="border:0"></iframe>		-->
+          <iframe src="https://www.google.com/maps/embed/v1/place?q=888%203%20Street%20Southwest%2C%20Calgary%2C%20AB%2C%20Canada&key=AIzaSyCevQjKK8Aab493DXROCLYf_XJc1R_dgtw" width="100%" height="750" frameborder="0" style="border:0"></iframe>
+        </div>
 		<div class="container">
 			<div class="row ftext">
 				<div class="col-md-12">
@@ -977,14 +978,14 @@
 					</div>
 					<div class="soc col-md-12">
 						<ul>
-							<li class="soc1"><a href="#"></a></li>
-							<li class="soc2"><a href="#"></a></li>
-							<li class="soc3"><a href="#"></a></li>
-							<li class="soc4"><a href="#"></a></li>
+							<!--<li class="soc1"><a href="#"></a></li>-->
+							<li class="soc2"><a href="https://www.facebook.com/thethinktech" target="_blank"></a></li>
+							<li class="soc3"><a href="https://twitter.com/thethinktech" target="_blank"></a></li>
+							<!--<li class="soc4"><a href="#"></a></li>-->
 							<!--<li class="soc5"><a href="#"></a></li>-->
 							<li class="soc6"><a href="#"></a></li>
-							<li class="soc7"><a href="#"></a></li>
-							<li class="soc8"><a href="#"></a></li>
+							<li class="soc7"><a href="https://plus.google.com/+Thethinktech" target="_blank"></a></li>
+							<!--<li class="soc8"><a href="#"></a></li>-->
 							
 						</ul>
 					</div>
