--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
 		<% meta title: "ThinkTech | Websites and Apps",
-          description: ""          
+          description: "Website and Mobile App Development in Calgary. We provide Web Design and Development, SEO and Digital Marketing, Custom Software Development."
   %>
-  <% metamagic keywords: [:keywords, "", "", "", "", ""] %>
+  <% metamagic keywords: [:keywords, "Web development", "Web Design", "SEO", "Digital Marketing", "Websites", "Mobile App", "Mobile Development"] %>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon"
+          type="image/png"
+          href="http://www.thethinktech.com/assets/thinktech_fav.png">
         <link href="https://plus.google.com/104929529486535940210" rel="publisher" />
         <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
