--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon"
+        type="image/png"
+        href="http://www.thethinktech.com/assets/thinkthech_fav.png">
 	<%= metamagic %>
   
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
