--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -292,7 +292,7 @@
 						<div class="about2">
 						<!--<img class="pic2Ab" src="/assets/picAbout/aboutP2.png">-->
 							<h3>Gaurav Gupta, Leela Eco Spa</h3>
-							<p>Beautifully crafted website in less than a month! Ashish and avneesh accommodated all requests swiftly (without exception) and made improvements on the go. All in all - super professional work, reasonable price and new friends!</p>
+							<p>Beautifully crafted website in less than a month! Ashish and Avneesh accommodated all requests swiftly (without exception) and made improvements on the go. All in all - super professional work, reasonable price and new friends!</p>
 						</div>
 					</div>
 				</div>
