Changes on Content

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -96,25 +96,25 @@
 				<div class="col-md-4 project">
 					<h3 id="counter">0</h3>
 					<h4>Awesome Projects</h4>
-					<p>We use best tools for Project Management and the journy has ben easy so far, Working with all different platforms and devices.</p>
+					<p>We use best Project Management practice and tools to make it easy for you to work with us. The journey has been exciting so far.</p>
 				</div>
 				<div class="col-md-4 project">
 					<h3 id="counter1">0</h3>
 					<h4>Happy Customers</h4>
-					<p>Understanding our customer business and developing a solution based on that is the secret of our Happy Customers.</p>
+					<p>We understand our customer's business and developing a solution accordingly. That's the secret for Happy Customers</p>
 				</div>
 				<div class="col-md-4 project">
 					<h3 id="counter2" style="margin-left: 20px;">0</h3>
 					<h4 style="margin-left: 20px;">Coffee with Clients</h4>
-					<p>We never miss a chance to have a coffee with our clients and knowing the better. You are always welcome.</p>
+					<p>We never miss a chance to have coffee with our clients. You are always welcome to meet us over coffee.</p>
 				</div>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 cBusiness">
-					<h3>WE DON’T BELIEVE IN JUST BUILDING A SOFTWARE, BUT WE DELIVER YOU A SOLUTION.</h3>
-					<h4>We provide elegant solution for your online business fast, reliable, affordable.</h4>
+					<h3>WE DON’T JUST BUILDING A SOFTWARE, WE ACCELERATE YOUR BUSINESS.</h3>
+					<h4>Fast, Reliable and Affordable Solutions for your business.</h4>
 				</div>
 			</div>
 		</div>
@@ -135,17 +135,17 @@
 				<div class="row Fresh">
 					<div class="col-md-4 Des">
 						<i class="fa fa-heart"></i>
-						<h4>Fresh & Clean Design</h4>
+						<h4>Fresh & Clean Designs</h4>
 						<!--<p>Nulla consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>-->
 					</div>
 					<div class="col-md-4 Ver">
 						<i class="fa fa-cog"></i>
-						<h4>Very Flexible</h4>
+						<h4>Quick Turnaround Time</h4>
 						<!--<p>Nulla consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>-->
 					</div>
 					<div class="col-md-4 Fully">
 						<i class="fa fa-tablet"></i>
-						<h4>Fully Responsive</h4>
+						<h4>Reliable Development</h4>
 						<!--<p>A auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>-->
 					</div>		
 				</div>
@@ -223,7 +223,7 @@
 					</div>
 					<div class="textP">
 						<h3>Ruby on Rails</h3>
-						<p>Strong hold in Ruby on Rails applications<br/>Developing Websites and Custom Web Softwares</p>
+						<p>Strong hold in developing Ruby on Rails Applications<br/>Websites and Custom Web Software</p>
 					</div>
 				</div>
 				<div class="col-md-3 bar">
@@ -249,7 +249,7 @@
 					</div>
 					<div class="textP">
 						<h3>Mobile App</h3>
-						<p>Developing for iOS and Android<br/>Give your business a App and reach your goals faster</p>
+						<p>We consult, advise and develop iOS and Android Apps<br/>after analyzing your business model</p>
 					</div>
 				</div>
 				<div class="col-md-3 bar ">
@@ -262,7 +262,7 @@
 					</div>
 					<div class="textP">
 						<h3>SEO and Marketing</h3>
-						<p>Increase Google and Bing Ranking of your Website<br/>Taking your business to the next Level</p>
+						<p>Increase Google and Bing Rankings of your Business Website<br/>And take your business to next Level</p>
 					</div>
 				</div>
 			</div>
@@ -284,15 +284,15 @@
 					<div class="col-md-6">
 						<div class="about1">
 						<!--<img class="pic1Ab" src="http://confidentmarketingcoach.com/wp-content/uploads/2013/08/LKS_1524f-640x640.jpg">-->
-							<h3 >Ave Peetri, Coaching by Ave Peetri Inc.</h3>
-							<p>They were listening very well to my needs and provided reviews of what they had done on a continuous bases to make sure that we are aligned and that I am getting what I wanted from the website. My website went up on time at the end of last year and has already outperformed my previous website in terms of conversions. I am receiving lots of good comments on the professionalism with which it was created.</p>
+							<h3>Ave Peetri, Coaching by Ave Peetri Inc.</h3>
+							<p>They were listening very well to my needs and provided reviews of what they had done on a continuous basis to make sure that we are aligned and that I am getting what I wanted from the website. My website went up on time at the end of last year and has already outperformed my previous website in terms of conversions. I am receiving lots of good comments on the professionalism with which it was created.</p>
                           </div>
 					</div>
 					<div class="col-md-6">
 						<div class="about2">
 						<!--<img class="pic2Ab" src="/assets/picAbout/aboutP2.png">-->
 							<h3>Gaurav Gupta, Leela Eco Spa</h3>
-							<p>Beautifully crafted website in less than a month! Ashish and Avneesh accommodated all requests swiftly (without exception) and made improvements on the go. All in all - super professional work, reasonable price and new friends!</p>
+							<p>Beautifully crafted website in less than a month! They accommodated all requests swiftly (without exception) and made improvements on the go. All in all - super professional work, reasonable price and new friends!</p>
 						</div>
 					</div>
 				</div>
@@ -351,13 +351,13 @@
                <div class="col-lg-6 p45">
                  <h3 class="section-subtitle"><i class="fa fa-rocket"></i> Web Development</h3>
                  <p class="text-md text-italic text-muted">
-                   It’s about accessibility and it’s here to stay. Ready or not, your audience is interacting with your site on devices that likely didn’t exist when your site was originally made. The easier it is for users to get your content how and where they want it, the better your site will perform.
+                   It’s about accessibility of your Business online. Ready or not, your audience is interacting with your site on devices that likely didn’t exist when your site was originally made. The easier it is for users to get your content how and where they want it, the better your site will perform.
                  </p>
                </div>
                <div class="col-lg-6 p45">
                  <h3 class="section-subtitle"><i class="fa fa-rocket"></i> App Development</h3>
                  <p class="text-md text-italic text-muted">
-                   Creating the right mobile app can be a big undertaking. That’s why we’re here to help every step of the way. We have full-scale team of mobile app developers, project managers, graphics and UI/UX designers, and quality assurance testers on hand ready to support you. No request is too big.
+                    Right from accessing your business needs on Mobile Platform to implement them, we’re here to help every step of the way. We have full-scale team of mobile app developers, project managers, graphics and UI/UX designers, and quality assurance testers on hand ready to support you. No request is too big.
                  </p>
                </div>
              </div>
@@ -365,13 +365,13 @@
                <div class="col-lg-6 p45">
                  <h3 class="section-subtitle"><i class="fa fa-rocket"></i> SEO & Digital Marketing</h3>
                  <p class="text-md text-italic text-muted">
-                   SEO is an ever-changing landscape, With smart strategy, and intelligent execution we will help you own your keywords on the first page of Google and other search engines. It’s time to start generating more qualified leads by driving more visitors to your website.
+                   SEO is an ever-changing landscape. With smartest online strategy, and intelligent execution we will help you own your keywords on the first page of Google and Bing search engines. It’s time to start generating more qualified leads by driving more visitors to your website.
                  </p>
                </div>
                <div class="col-lg-6 p45">
                  <h3 class="section-subtitle"><i class="fa fa-rocket"></i> Custom Development</h3>
                  <p class="text-md text-italic text-muted">
-                   We design our custom software solutions to address the unique challenges and requirements of your organization — both today and in the future. We will take the time to understand your specific web development, custom software, and tech needs, ensuring that we create a product suited to work for your business.
+                   We design our custom software solutions to address the unique challenges and requirements of your organization. We take time to understand your specific technological needs, and ensure we are creating a quality product satisfying your business needs. We support and maintain the software throughout the product lifecycle.
                  </p>
                </div>
              </div>
@@ -642,7 +642,7 @@
 		</div>
        <section class="clients">
 
-       	<div class="hidden-xs p70" id="client_carousel">
+         <div class="hidden-xs p70" id="client_carousel">
     <div id="myCarousel" class="carousel slide">     
     <!-- <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-sbunlide-to="0" class="active"></li>
@@ -896,7 +896,7 @@
 				<div class="row Ama">
 					<div class="col-md-12">
 					<h3>THANKS FOR VISITING US</h3>
-					<p>WE ARE SITUATED IN BANKERS HALL - CALGARY, CANADA</p>
+					<p>WE ARE SITUATED IN BANKERS HALL, DOWNTOWN CALGARY, CANADA</p>
 					</div>
 				</div>
 			</div>
@@ -952,7 +952,7 @@
 			<div class="row ftext">
 				<div class="col-md-12">
 				<a id="features"></a>
-				<h3>We Care About Our Clients and Can Make Their Life Easier!</h3>
+				<h3>WE BELIEVE IN ETHICS, QUALITY AND COMMITMENT</h3>
 				<!--<p>The main peculiarity of template is the striking presentation when visitors just need to use the scrolling option to find all necessary information about your web project. </p>-->
 				</div>
 				<!--<div class="cBtn">-->
@@ -967,12 +967,12 @@
 			<div class="container">
 				<div class="row footer">
 					<div class="col-md-12">
-						<h3>Subscribe for Our Newsletter!</h3>
-						<p>Subscribe to our newsletter email to get notification about fresh news, latest promos, giveaways and free stuff from Skew. Stay always up-to-date!</p>
+						<h3>Subscribe for Our Email Newsletter!</h3>
+						<p>Subscribe to our newsletter email to get notification about fresh news and latest promos. Stay always up-to-date!</p>
 						<div class="fr">
 						<div style="display: inline-block;">
 							<input class="col-md-6 fEmail" name='Email' placeholder='Enter Your Email'/>
-							<a href="#" class="subS">Subscribe!</a>
+							<a href="#" class="subS">Subscribe</a>
 						</div>
 						</div>
 					</div>
@@ -1068,10 +1068,10 @@
 						if(curval<=112){
 							$('#counter').text(curval+1);
 						}
-						if(curval1<=56){
+						if(curval1<=40){
 							$('#counter1').text(sdf_FTS((curval1+20),0,' '));
 						}
-						if(curval2<=642){
+						if(curval2<=432){
 							$('#counter2').text(curval2+1);
 						}
 					}, 2);
