Changes on Content

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -96,12 +96,12 @@
 				<div class="col-md-4 project">
 					<h3 id="counter">0</h3>
 					<h4>Awesome Projects</h4>
-					<p>We use best Project Management practice and tools to make it easy for you to work with us. The journey has been exciting so far.</p>
+					<p>We use best Project Management practices and tools to make it easy for you to work with us. The journey has been exciting so far.</p>
 				</div>
 				<div class="col-md-4 project">
 					<h3 id="counter1">0</h3>
 					<h4>Happy Customers</h4>
-					<p>We understand our customer's business and developing a solution accordingly. That's the secret for Happy Customers</p>
+					<p>We understand our customer's business and develop a solution accordingly. That's the secret for our Happy Customers.</p>
 				</div>
 				<div class="col-md-4 project">
 					<h3 id="counter2" style="margin-left: 20px;">0</h3>
@@ -113,7 +113,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 cBusiness">
-					<h3>WE DON’T JUST BUILDING A SOFTWARE, WE ACCELERATE YOUR BUSINESS.</h3>
+					<h3>WE DON’T JUST BUILD A SOFTWARE, WE ACCELERATE YOUR BUSINESS.</h3>
 					<h4>Fast, Reliable and Affordable Solutions for your business.</h4>
 				</div>
 			</div>
@@ -135,7 +135,7 @@
 				<div class="row Fresh">
 					<div class="col-md-4 Des">
 						<i class="fa fa-heart"></i>
-						<h4>Fresh & Clean Designs</h4>
+						<h4>Fresh & Clean Design</h4>
 						<!--<p>Nulla consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>-->
 					</div>
 					<div class="col-md-4 Ver">
@@ -223,7 +223,7 @@
 					</div>
 					<div class="textP">
 						<h3>Ruby on Rails</h3>
-						<p>Strong hold in developing Ruby on Rails Applications<br/>Websites and Custom Web Software</p>
+						<p>Strong hold in developing Ruby on Rails Applications,<br/>Websites and Custom Web Software</p>
 					</div>
 				</div>
 				<div class="col-md-3 bar">
@@ -262,7 +262,7 @@
 					</div>
 					<div class="textP">
 						<h3>SEO and Marketing</h3>
-						<p>Increase Google and Bing Rankings of your Business Website<br/>And take your business to next Level</p>
+						<p>Increase Google and Bing Rankings of your Business Website<br/>and take your business to next Level</p>
 					</div>
 				</div>
 			</div>
@@ -357,7 +357,7 @@
                <div class="col-lg-6 p45">
                  <h3 class="section-subtitle"><i class="fa fa-rocket"></i> App Development</h3>
                  <p class="text-md text-italic text-muted">
-                    Right from accessing your business needs on Mobile Platform to implement them, we’re here to help every step of the way. We have full-scale team of mobile app developers, project managers, graphics and UI/UX designers, and quality assurance testers on hand ready to support you. No request is too big.
+                    Right from assessing your business needs on Mobile Platform to implementing them, we’re here to help every step of the way. We have full-scale team of mobile app developers, project managers, graphics and UI/UX designers, and quality assurance testers on hand ready to support you. No request is too big.
                  </p>
                </div>
              </div>
@@ -365,13 +365,13 @@
                <div class="col-lg-6 p45">
                  <h3 class="section-subtitle"><i class="fa fa-rocket"></i> SEO & Digital Marketing</h3>
                  <p class="text-md text-italic text-muted">
-                   SEO is an ever-changing landscape. With smartest online strategy, and intelligent execution we will help you own your keywords on the first page of Google and Bing search engines. It’s time to start generating more qualified leads by driving more visitors to your website.
+                   SEO is an ever-changing landscape. With smartest online strategies, and intelligent execution, we will help you own your keywords on the first page of Google and Bing search engines. It’s time to start generating more qualified leads by driving more visitors to your website.
                  </p>
                </div>
                <div class="col-lg-6 p45">
                  <h3 class="section-subtitle"><i class="fa fa-rocket"></i> Custom Development</h3>
                  <p class="text-md text-italic text-muted">
-                   We design our custom software solutions to address the unique challenges and requirements of your organization. We take time to understand your specific technological needs, and ensure we are creating a quality product satisfying your business needs. We support and maintain the software throughout the product lifecycle.
+                   We design our custom software solutions to address the unique challenges and requirements of your organization. We take time to understand your specific technological needs, and ensure that we are creating a quality product satisfying your business needs. We support and maintain the software throughout the product lifecycle.
                  </p>
                </div>
              </div>
