--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -63,7 +63,7 @@
 						<div class="camera_wrap camera_white_skin" id="camera_wrap_1">
                           <div data-thumb="" data-src="/assets/slides/blank.gif">
                             <div class="img-responsive camera_caption fadeFromBottom">
-                              <h2>Web Development</h2>
+                              <h2>Custom Software</h2>
                             </div>
                           </div>
 							<div data-thumb="" data-src="/assets/slides/blank.gif">
