--- a/app/views/articles/_menu.html.erb
+++ b/app/views/articles/_menu.html.erb
@@ -10,7 +10,7 @@
 			<div class="col-md-8">
 				<div class="navmenu"style="text-align: center;">
 					<ul id="menu">
-						<li class="active" ><a href="/#home">Home</a></li>
+						<li class="" ><a href="/#home">Home</a></li>
 						<li><a href="/#about">About</a></li>
 						<li><a href="/#service">Services</a></li>
 						<li><a href="/#technologies">Technologies</a></li>
