--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -59,7 +59,65 @@
 	<%= render "articles/menu" %>
 		<div class="container">
 			<div class="row wrap">
-				<div class="col-md-12 gallery"> 
+				
+
+					<!-- Button trigger modal -->
+		<div class="col-sm-6"></div>			
+		<div class="col-sm-6">
+			<p class="col_white">See how your website is pulling your business online</p>
+		    <div class="input-group">
+		      <input type="text" class="form-control" placeholder="Type in your website address here">
+		      <span class="input-group-btn">
+		        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Go!</button>
+		      </span>
+		    </div>
+		 </div>
+		 
+
+		<!-- Modal -->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title text-center" id="myModalLabel">Please enter your Name and email address to send your website report</h4>
+		      </div>
+		      <div class="modal-body">
+		    
+		        	<form class="form-horizontal" role="form">
+			        <div class="form-group">                
+			            <label class="col-sm-3 col-lg-2"> Name *</label>
+			            <div class="col-sm-9 col-lg-10">
+			            <input class="form-control" placeholder="Enter The Name" tabindex="1" type="text" required>
+			            </div>
+			        </div>
+			        <div class="form-group">                
+			            <label class="col-sm-3 col-lg-2"> Email *</label>
+			            <div class="col-sm-9 col-lg-10">
+			            <input class="form-control"  placeholder="Enter The email" tabindex="2" type="text" required>
+			            </div>
+			        </div>
+			        <div class="form-group">                
+			            <label class="col-sm-3 col-lg-2"> Mobile</label>
+			            <div class="col-sm-9 col-lg-10">
+			            <input class="form-control" placeholder="Enter The Mobile" tabindex="3" type="text">
+			            </div>
+			        </div>
+			        <div class="form-group">
+				      <div class="col-sm-offset-3 col-sm-9 col-lg-offset-2 col-lg-10">
+				         <button type="submit" class="btn btn-primary">Send</button>
+				      </div>
+				   </div>
+			    	</form>
+			  
+		      </div>
+		      <div class="modal-footer">
+                Get in touch with us <a href="mailto:ashish@thethinktech.com">ashish@thethinktech.com</a>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+					<div class="col-md-12 gallery"> 
 						<div class="camera_wrap camera_white_skin" id="camera_wrap_1">
                           <div data-thumb="" data-src="/assets/slides/blank.gif">
                             <div class="img-responsive camera_caption fadeFromBottom">
