--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -66,12 +66,17 @@
 		<div class="col-sm-6">
 			<p class="col_white">See how your website is pulling your business online</p>
 		    <div class="input-group">
-		      <input type="text" class="form-control" placeholder="Type in your website address here">
+		      <input type="text" class="form-control", id="site_id"  placeholder="Type in your website address here">
 		      <span class="input-group-btn">
-		        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Go!</button>
+		        <button type="button" onclick="search(this.id)" id="1" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Go!</button>
 		      </span>
 		    </div>
 		 </div>
+
+		 
+
+<!-- <p>Tip: <input id="tip" disabled="disabled" /></p> -->
+
 		 
 
 		<!-- Modal -->
@@ -84,31 +89,35 @@
 		      </div>
 		      <div class="modal-body">
 		    
-		        	<form class="form-horizontal" role="form">
-			        <div class="form-group">                
-			            <label class="col-sm-3 col-lg-2"> Name *</label>
-			            <div class="col-sm-9 col-lg-10">
-			            <input class="form-control" placeholder="Enter The Name" tabindex="1" type="text" required>
-			            </div>
-			        </div>
-			        <div class="form-group">                
-			            <label class="col-sm-3 col-lg-2"> Email *</label>
-			            <div class="col-sm-9 col-lg-10">
-			            <input class="form-control"  placeholder="Enter The email" tabindex="2" type="text" required>
-			            </div>
-			        </div>
-			        <div class="form-group">                
-			            <label class="col-sm-3 col-lg-2"> Mobile</label>
-			            <div class="col-sm-9 col-lg-10">
-			            <input class="form-control" placeholder="Enter The Mobile" tabindex="3" type="text">
-			            </div>
-			        </div>
-			        <div class="form-group">
-				      <div class="col-sm-offset-3 col-sm-9 col-lg-offset-2 col-lg-10">
-				         <button type="submit" class="btn btn-primary">Send</button>
-				      </div>
-				   </div>
-			    	</form>
+		    <%= form_for @search, html: {multipart: :true , class: "form-horizontal" } do |f| %>
+					
+			 <div class="form-group">
+			 	<label class="col-sm-3 col-lg-2"> Name *</label>
+			 	<div class="col-sm-9 col-lg-10">
+			    <%= f.text_field :name, type:"text", tabindex: "1", class: "form-control", placeholder: 'Enter The Name', required: true  %>
+				</div>
+			  </div>
+			  <div class="form-group">
+			   <label class="col-sm-3 col-lg-2"> Email *</label>
+			     	<div class="col-sm-9 col-lg-10">					    
+			    <%= f.text_field :email, type:"email", tabindex: "2", class: "form-control",  placeholder: 'Enter The Email',  required: true  %>
+			    	</div>
+			  </div>
+			  <div class="form-group">
+			  	<label class="col-sm-3 col-lg-2"> Mobile</label>
+			        <div class="col-sm-9 col-lg-10">
+			    <%= f.number_field :phone, type:"tel", tabindex: "3", class: "form-control", placeholder: 'Write Your Phone number *', required: true  %>
+					</div>
+			  </div>
+			  
+			  <div class="row">
+				  <div class="col-sm-offset-3 col-sm-9 col-lg-offset-2 col-lg-10">
+				  	<%= f.submit "Clear Form", type: :reset, tabindex: "4", :class => 'btn btn-primary' %>
+					<%= f.submit 'Send Message', tabindex: "5", :class => 'btn btn-primary' %>
+				  </div>
+			  </div>
+
+			<% end %>
 			  
 		      </div>
 		      <div class="modal-footer">
@@ -1216,6 +1225,23 @@
         ga('send', 'pageview');
 
     </script>
+
+
+
+
+
+<script type="text/javascript">
+    function search (id) {     
+	  var site = $('#site_id').val();	   
+	  
+	  if (id == "1") {		  
+	  $('#tip').val(site);
+	  }
+  }
+</script>
+
+
+
 	</body>
 	
 </html>
