--- a/app/views/articles/_menu.html.erb
+++ b/app/views/articles/_menu.html.erb
@@ -2,23 +2,33 @@
 <div id="menuF" class="default">
 	<div class="container">
 		<div class="row">
-			<div class="logo col-xs-8 col-md-4">
+			<div class="logo col-xs-8 col-md-3">
 					<a href="/">
 						<img class="logo_width" src="/assets/ThinkTech_white.png">
 					</a>
 			</div>
-			<div class="col-md-8">
+			<div class="col-md-9">
 				<div class="navmenu"style="text-align: center;">
+					
 					<ul id="menu">
 						<li class="" ><a href="/#home">Home</a></li>
 						<li><a href="/#about">About</a></li>
 						<li><a href="/#service">Services</a></li>
+						<li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#">Products<b class="caret"></b></a>
+							<ul class="dropdown-menu">
+				                <li><a href="#">Restaurants App</a></li>
+				                <li><a href="#">HR Industry - Recruitment App</a></li>
+				                <li><a href="#">3D Product Catalogue App</a></li>
+				                <li><a href="#">Appointment Scheduler App</a></li>
+				            </ul>
+				        </li>
 						<li><a href="/#technologies">Technologies</a></li>
 						<li><a href="/#client">Clients</a></li>
 						<li><a href="/articles">Blog</a></li>
 						<li class="last"><a href="/#contact">Contact</a></li>
 						<!--li><a href="#features">Features</a></li-->
 					</ul>
+				
 				</div>
 			</div>
 		</div>
