digital marketing page added

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -430,7 +430,7 @@
              </div>
              <div class="row">
                <div class="col-lg-6 p45">
-                 <h3 class="section-subtitle"><i class="fa fa-rocket"></i> SEO & Digital Marketing</h3>
+                 <a href="/service-seo"><h3 class="section-subtitle"><i class="fa fa-rocket"></i> SEO & Digital Marketing</h3></a>
                  <p class="text-md text-italic text-muted">
                    SEO is an ever-changing landscape. With smartest online strategies, and intelligent execution, we will help you own your keywords on the first page of Google and Bing search engines. It’s time to start generating more qualified leads by driving more visitors to your website.
                  </p>
