--- a/app/views/static_pages/service_seo.html.erb
+++ b/app/views/static_pages/service_seo.html.erb
@@ -3,10 +3,10 @@
 <html lang="en">
   	<head>
 
-		<% meta title: "Blog | ThinkTech",
+		<% meta title: "SEO & Digital Marketing | ThinkTech",
           description: ""          
   %>
-  <% metamagic keywords: [:keywords, "", "", "", "", ""] %>
+  <% metamagic keywords: [:keywords, "SEO", "Digital Marketing", "SEO & Digital Marketing", "", ""] %>
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,15 +28,22 @@
 		<div class = "container minh">
 			<div class= "row">
 				<div class="col-sm-12">		         	
-		            <div class="blog-item">
-		                <div class="row">
-		                    <div class="col-xs-12 col-sm-2 text-center">
-		                        
-		                    </div>
-		                        
-		                    <div class="col-xs-12 col-sm-10">
-		                                                     
+		            <div class="">
+		                <div class="row pad_top2 pad_bot5">
+		                    <div class="well">
+		                    	<div class="row">
+			                    <div class="col-xs-12 col-sm-12">
+			                          <p>SEO is an ever-changing landscape. With smartest online strategies, and intelligent execution, we will help you own your keywords on the first page of Google and Bing search engines. It’s time to start generating more qualified leads by driving more visitors to your website.</p>
+								</div>
+								</div>
 							</div>
+							<div class="col-sm-6">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/d4aijRJFOq4?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+							</div>
+							<div class="col-sm-6">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/rw-tlt3AnI0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+							</div>
+
 		                </div>    
 		            </div>
 		        </div>
