--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -63,7 +63,7 @@
 
 					<!-- Button trigger modal -->
 		<div class="col-sm-6"></div>			
-		<div class="col-sm-6">
+		<div class="col-sm-6 pad_top1">
 			<p class="col_white">See how your website is pulling your business online</p>
 		    <div class="input-group">
 		      <input type="text" class="form-control", id="site_id"  placeholder="Type in your website address here">
@@ -73,11 +73,6 @@
 		    </div>
 		 </div>
 
-		 
-
-<!-- <p>Tip: <input id="tip" disabled="disabled" /></p> -->
-
-		 
 
 		<!-- Modal -->
 		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -90,7 +85,8 @@
 		      <div class="modal-body">
 		    
 		    <%= form_for @search, html: {multipart: :true , class: "form-horizontal" } do |f| %>
-					
+			
+				<%= f.hidden_field :site, id: "tip" %>
 			 <div class="form-group">
 			 	<label class="col-sm-3 col-lg-2"> Name *</label>
 			 	<div class="col-sm-9 col-lg-10">
@@ -106,7 +102,7 @@
 			  <div class="form-group">
 			  	<label class="col-sm-3 col-lg-2"> Mobile</label>
 			        <div class="col-sm-9 col-lg-10">
-			    <%= f.number_field :phone, type:"tel", tabindex: "3", class: "form-control", placeholder: 'Write Your Phone number *', required: true  %>
+			    <%= f.number_field :phone, type:"tel", tabindex: "3", class: "form-control", placeholder: 'Write Your Mobile Number'  %>
 					</div>
 			  </div>
 			  
