--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -436,156 +436,6 @@
 
            </div>
          </div>
-
-
-         <!--<div class="row">-->
-			<!--&lt;!&ndash; filter_block &ndash;&gt;-->
-				<!--<div id="options" class="col-md-12" style="text-align: center;">	-->
-					<!--<ul id="filter" class="option-set" data-option-key="filter">-->
-						<!--<li><a class="selected" href="#filter" data-option-value="*" class="current">All Works</a></li>-->
-						<!--<li><a href="#filter" data-option-value=".polygraphy">Polygraphy</a></li>-->
-						<!--<li><a href="#filter" data-option-value=".branding">Branding</a></li>-->
-						<!--<li><a href="#filter" data-option-value=".web">Web UI</a></li>-->
-						<!--<li><a href="#filter" data-option-value=".text_styles">Text Styles</a></li>-->
-					<!--</ul>-->
-				<!--</div>&lt;!&ndash; //filter_block &ndash;&gt;-->
-		<!---->
-		<!---->
-		<!---->
-			<!--<div class="portfolio_block columns3   pretty" data-animated="fadeIn">	-->
-					<!--<div class="element col-sm-4   gall branding">-->
-						<!--<a class="plS" href="/assets/prettyPhotoImages/pic1.jpg" rel="prettyPhoto[gallery2]">-->
-							<!--<img class="img-responsive picsGall" src="/assets/prettyPhotoImages/thumb_pic1.jpg" alt="pic1 Gallery"/>-->
-						<!--</a>-->
-						<!--<div class="view project_descr ">-->
-							<!--<h3><a href="#">Recycled Paper - Business Card Mock Up</a></h3>-->
-							<!--<ul>-->
-								<!--<li><i class="fa fa-eye"></i>215</li>-->
-								<!--<li><a class="heart" href="#"><i class="fa-heart-o"></i>14</a></li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div class="element col-sm-4  gall branding">-->
-						<!--<a class="plS" href="/assets/prettyPhotoImages/pic2.jpg" rel="prettyPhoto[gallery2]">-->
-							<!--<img class="img-responsive picsGall" src="/assets/prettyPhotoImages/thumb_pic2.jpg" alt="pic2 Gallery"/>-->
-						<!--</a>-->
-						<!--<div class="view project_descr center">-->
-							<!--<h3><a href="#">Environment Logos Set</a></h3>-->
-							<!--<ul>-->
-								<!--<li><i class="fa fa-eye"></i>369</li>-->
-								<!--<li><a  class="heart" href="#"><i class="fa-heart-o"></i>86</a></li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div class="element col-sm-4  gall web">-->
-						<!--<a class="plS" href="/assets/prettyPhotoImages/pic3.jpg" rel="prettyPhoto[gallery2]">-->
-							<!--<img class="img-responsive picsGall" src="/assets/prettyPhotoImages/thumb_pic3.jpg" alt="pic3 Gallery"/>-->
-						<!--</a>-->
-						<!--<div class="view project_descr ">-->
-							<!--<h3><a href="#">Beag Simple WEB UI</a></h3>-->
-							<!--<ul>-->
-								<!--<li><i class="fa fa-eye"></i>400</li>-->
-								<!--<li><a  class="heart" href="#"><i class="fa-heart-o"></i>124</a></li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>-->
-		<!---->
-		<!---->
-					<!---->
-					<!--<div class="element col-sm-4  gall  text_styles">-->
-						<!--<a class="plS" href="/assets/prettyPhotoImages/pic4.jpg" rel="prettyPhoto[gallery2]">-->
-							<!--<img class="img-responsive picsGall" src="/assets/prettyPhotoImages/thumb_pic4.jpg" alt="pic1 Gallery"/>-->
-						<!--</a>-->
-						<!--<div class="view project_descr ">-->
-							<!--<h3><a href="#">Pop Candy Text Effect</a></h3>-->
-							<!--<ul>-->
-								<!--<li><i class="fa fa-eye"></i>480</li>-->
-								<!--<li><a  class="heart" href="#"><i class="fa-heart-o"></i>95</a></li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div class="element col-sm-4  gall  web">-->
-						<!--<a class="plS" href="/assets/prettyPhotoImages/pic5.jpg" rel="prettyPhoto[gallery2]">-->
-							<!--<img class="img-responsive picsGall" src="/assets/prettyPhotoImages/thumb_pic5.jpg" alt="pic1 Gallery"/>-->
-						<!--</a>-->
-						<!--<div class="view project_descr center">-->
-							<!--<h3><a href="#">User Interface Elements</a></h3>-->
-							<!--<ul>-->
-								<!--<li><i class="fa fa-eye"></i>215</li>-->
-								<!--<li><a  class="heart" href="#"><i class="fa-heart-o"></i>14</a></li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div class="element col-sm-4  gall  polygraphy">-->
-						<!--<a class="plS" href="/assets/prettyPhotoImages/pic6.jpg" rel="prettyPhoto[gallery2]">-->
-							<!--<img class="img-responsive picsGall" src="/assets/prettyPhotoImages/thumb_pic6.jpg" alt="pic1 Gallery"/>-->
-						<!--</a>-->
-						<!--<div class="view project_descr ">-->
-							<!--<h3><a href="#">Stationery Branding Mock Up</a></h3>-->
-							<!--<ul>-->
-								<!--<li><i class="fa fa-eye"></i>375</li>-->
-								<!--<li><a  class="heart" href="#"><i class="fa-heart-o"></i>102</a></li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>		-->
-					<!--<div class="element col-sm-4   gall branding">-->
-						<!--<a class="plS" href="/assets/prettyPhotoImages/pic7.jpg" rel="prettyPhoto[gallery2]">-->
-							<!--<img class="img-responsive picsGall" src="/assets/prettyPhotoImages/thumb_pic7.jpg" alt="pic1 Gallery"/>-->
-						<!--</a>-->
-						<!--<div class="view project_descr ">-->
-							<!--<h3><a href="#">Darko - Business Card Mock Up</a></h3>-->
-							<!--<ul>-->
-								<!--<li><i class="fa fa-eye"></i>440</li>-->
-								<!--<li><a  class="heart" href="#"><i class="fa-heart-o"></i>35</a></li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!---->
-					<!--<div class="element col-sm-4  gall text_styles">-->
-						<!--<a class="plS" href="/assets/prettyPhotoImages/pic8.jpg" rel="prettyPhoto[gallery2]">-->
-							<!--<img class="img-responsive picsGall" src="/assets/prettyPhotoImages/thumb_pic8.jpg" alt="pic1 Gallery"/>-->
-						<!--</a>-->
-						<!--<div class="view project_descr ">-->
-							<!--<h3><a href="#">Foil Mini Badges</a></h3>-->
-							<!--<ul>-->
-								<!--<li><i class="fa fa-eye"></i>512</li>-->
-								<!--<li><a  class="heart" href="#"><i class="fa-heart-o"></i>36</a></li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!---->
-					<!--<div class="element col-sm-4  gall polygraphy">-->
-						<!--<a class="plS" href="/assets/prettyPhotoImages/pic9.jpg" rel="prettyPhoto[gallery2]">-->
-							<!--<img class="img-responsive picsGall" src="/assets/prettyPhotoImages/thumb_pic9.jpg" alt="pic1 Gallery"/>-->
-						<!--</a>-->
-						<!--<div class="view project_descr ">-->
-							<!--<h3><a href="#">Woody Poster Text Effect</a></h3>-->
-							<!--<ul>-->
-								<!--<li><i class="fa fa-eye"></i>693</li>-->
-								<!--<li><a  class="heart" href="#"><i class="fa-heart-o"></i>204</a></li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>			-->
-			<!--</div>-->
-			<!---->
-			<!---->
-				<!---->
-					<!--<div class="col-md-12 cBtn  lb" style="text-align: center;">-->
-						<!--<ul class="load_more_cont ">-->
-							<!--<li class="dowbload btn_load_more">-->
-								<!--<a href="javascript:void(0);" >-->
-									<!--<i class="fa fa-arrow-down"></i>Load More Projects-->
-								<!--</a>-->
-							<!--</li>-->
-							<!--<li class="buy">-->
-								<!--<a href="#">-->
-									<!--<i class="fa fa-shopping-cart"></i>Buy on Themeforest-->
-								<!--</a>-->
-							<!--</li>-->
-						<!--</ul>-->
-					<!--</div>-->
-			<!---->
-		<!--</div>-->
 			
 			<script type="text/javascript">
 				jQuery(window).load(function(){
@@ -659,7 +509,7 @@
                     <h3>Web CMS</h3>
                     <p>Wordpress</p>
                     <p>Drupal</p>
-                    <p>Jhomla</p>
+                    <p>Joomla</p>
                   </div>
                 </div>
                 <div class="col-lg-6 p45">
@@ -701,11 +551,7 @@
        <section class="clients">
 
          <div class="hidden-xs p70" id="client_carousel">
-    <div id="myCarousel" class="carousel slide">     
-    <!-- <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-sbunlide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-    </ol> -->
+    <div id="myCarousel" class="carousel slide">
      
     <!-- Carousel items -->
     <div class="carousel-inner">
