Title tag changes

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-		<% meta title: "ThinkTech | Websites and Apps",
+		<% meta title: "ThinkTech | Websites, SEO and Apps",
           description: "Website and Mobile App Development in Calgary. We provide Web Design and Development, SEO and Digital Marketing, Custom Software Development."
   %>
-  <% metamagic keywords: [:keywords, "Web development", "Web Design", "SEO", "Digital Marketing", "Websites", "Mobile App", "Mobile Development"] %>
+  <% metamagic keywords: [:keywords, "Web development Calgary", "Web Design Calgary", "SEO Calgary", "Digital Marketing Calgary", "Websites Calgary", "Mobile App Development Calgary", "Mobile Development Calgary", "iPhone App Developer Calgary", "Android App Developer Calgary", "Search Engine Optimization Calgary", "Online Markiting Calgary"] %>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://plus.google.com/104929529486535940210" rel="publisher" />
