--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,6 +17,11 @@
     <%= f.label :'URL Name *' %>
     <%= f.text_field :slug, type:"text", tabindex: "2", class: "form-control", placeholder: 'Write the URL name', required: true  %>
   </div>
+  <div class="form-group"> 
+    <% if flash[:notice] %>
+      <div class="notice"><%= flash[:notice] %></div>
+    <% end %>
+  </div>
   
   <div class="form-group">
     <%= f.label :'body *' %><br>
