--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -50,11 +50,11 @@
 		                        
 		                    <div class="col-xs-12 col-sm-10">
 
-		                    <h2><%= link_to  article.title.html_safe, article_path(article.id) %></h2>
+		                    <h2><%= link_to  article.title.html_safe, article_path(article.slug) %></h2>
 
 		                        <p><%= article.body.html_safe %></p>
 
-		                        <%= link_to "Read More ".html_safe + "<i class='fa fa-angle-right'></i>".html_safe, article_path(article.id), class: "btn btn-primary" %>
+		                        <%= link_to "Read More ".html_safe + "<i class='fa fa-angle-right'></i>".html_safe, article_path(article.slug), class: "btn btn-primary" %>
 		                        <% if blogger_signed_in? %>
 		                        <%= link_to "Edit Article", edit_article_path(article), class: "btn btn-primary" %>
 		                        <%= link_to "Delete Article", delete_path(id: article.id), data:{ confirm: 'Are you sure?'}, class: "btn btn-primary" %>
