--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -36,7 +36,7 @@
                     </div>
                         
                     <div class="col-xs-12 col-sm-10">
-                        <h2><%= @article.title.html_safe %></h2>
+                        <h2 class="readMore"><%= @article.title.html_safe %></h2>
                         <p><%= @article.body.html_safe %></p>
                     </div> 
                 </div>
