few keywords added for seo

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
 		<% meta title: "Blog | ThinkTech",
           description: ""          
   %>
-  <% metamagic keywords: [:keywords, "", "", "", "", ""] %>
+  <% metamagic keywords: [:keywords, "blog", "blog thinktech", " blog calgary", "blog thintech calgary", "ThinkTech Blog"] %>
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
