--- a/app/views/static_pages/service_custom.html.erb
+++ b/app/views/static_pages/service_custom.html.erb
@@ -3,7 +3,7 @@
 <html lang="en">
   	<head>
 
-		<% meta title: "Blog | ThinkTech",
+		<% meta title: "Custom Development | ThinkTech",
           description: ""          
   %>
   <% metamagic keywords: [:keywords, "", "", "", "", ""] %>
