--- a/app/views/static_pages/service_seo.html.erb
+++ b/app/views/static_pages/service_seo.html.erb
@@ -4,9 +4,9 @@
   	<head>
 
 		<% meta title: "SEO & Digital Marketing | ThinkTech",
-          description: ""          
+          description: "We provide SEO services as well as Digital Marketing for the web sites."          
   %>
-  <% metamagic keywords: [:keywords, "SEO", "Digital Marketing", "SEO & Digital Marketing", "", ""] %>
+  <% metamagic keywords: [:keywords, "SEO", "Digital Marketing", "SEO & Digital Marketing", "seo thinktech", "Search engine optimization", "Search engine optimization thinktech", "Search engine optimization Calgary", "SEO thinktech", "SEO Calgary", "Digital Marketing Calgary", "thinktech Digital Marketing", "SEO & Digital Marketing ThinkTech" ] %>
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
