new link for facebook added

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -846,7 +846,7 @@
 						<li><a href="#"><i class="fa fa-envelope"></i>ashish@thethinktech.com</a></li>
 						<li><i class="fa fa-skype"></i>thethinktech</li>
 						<li><a href="https://twitter.com/thethinktech" target="_blank"><i class="fa fa-twitter"></i>Twitter</a></li>
-						<li><a href="https://www.facebook.com/thethinktech" target="_blank"><i class="fa fa-facebook-square"></i>Facebook</a></li>
+						<li><a href="https://www.facebook.com/thinktechsoftware" target="_blank"><i class="fa fa-facebook-square"></i>Facebook</a></li>
 						<!--<li><a href="#"><i class="fa fa-dribbble"></i>Dribbble</a></li>-->
 						<!--<li><a href="#"><i class="fa fa-flickr"></i>Flickr</a></li>-->
 						<!--<li><a href="#"><i class="fa fa-youtube-play"></i>YouTube</a></li>-->
@@ -889,7 +889,7 @@
 					<div class="soc col-md-12">
 						<ul>
 							<!--<li class="soc1"><a href="#"></a></li>-->
-							<li class="soc2"><a href="https://www.facebook.com/thethinktech" target="_blank"></a></li>
+							<li class="soc2"><a href="https://www.facebook.com/thinktechsoftware" target="_blank"></a></li>
 							<li class="soc3"><a href="https://twitter.com/thethinktech" target="_blank"></a></li>
 							<!--<li class="soc4"><a href="#"></a></li>-->
 							<!--<li class="soc5"><a href="#"></a></li>-->
