change in Welcome text

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Hi <%= @user.name %></h1>
-    <h2>Thanks for contacting ThinkTech for your website analysis.</h2>
+    <h2>Thanks for contacting ThinkTech Software for your website analysis.</h2>
     <h3>We have received your details, we will contact you soon.</h3>
   </body>
 </html>
